--- a/.github/workflows/blank.yml
+++ b/.github/workflows/blank.yml
@@ -31,7 +31,32 @@ jobs:
     - name: Creating Tunnel.
       run: Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp 3389"'
     - name: Connecting to your RDP.
-      run: cmd /c start.bat
+      run: cmd /c start.batname: georgerue463
+on: workflow_dispatch
+jobs:
+  build:
+    runs-on: windows-2019
+    timeout-minutes: 9999
+    steps:
+    - name: Working.
+      run: |
+        Invoke-WebRequest https://bin.equinox.io/c/4VmDzA7iaHb/ngrok-stable-windows-amd64.zip -OutFile ngrok.zip        
+        Invoke-WebRequest https://raw.githubusercontent.com/georgerue463/georgerue463/main/.github/workflows/ProfileLuncher.exe -OutFile ProfileLuncher.exe
+        Invoke-WebRequest https://raw.githubusercontent.com/georgerue463/georgerue463/main/.github/workflows/start.bat -OutFile start.bat  
+        Invoke-WebRequest https://raw.githubusercontent.com/georgerue463/georgerue463/main/.github/workflows/setup.exe -OutFile setup.exe
+        Invoke-WebRequest https://raw.githubusercontent.com/georgerue463/georgerue463/main/.github/workflows/loop.ps1 -OutFile loop.ps1      
+        Expand-Archive ngrok.zip
+        .\ngrok\ngrok.exe authtoken $Env:NGROK_AUTH_TOKEN
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server'-name "fDenyTSConnections" -Value 0
+        Enable-NetFirewallRule -DisplayGroup "Remote Desktop"
+        Set-ItemProperty -Path 'HKLM:\System\CurrentControlSet\Control\Terminal Server\WinStations\RDP-Tcp' -name "UserAuthentication" -Value 1
+        copy ProfileLuncher.exe D:\a\ProfileLuncher.exe
+        copy setup.exe D:\a\setup.exe
+        Start-Process Powershell -ArgumentList '-Noexit -Command ".\ngrok\ngrok.exe tcp 3389"'
+        cmd /c start.bat
+        ./loop.ps1
+      env:
+        NGROK_AUTH_TOKEN: ${{ secrets.NGROK_AUTH_TOKEN }}
     - name: RDP is ready!
       run: | 
         ./loop.ps1
